# starlog

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  VISION.md  docker-compose.yml  package.json  playwright.config.ts  playwright.hosted.config.ts  playwright.live-functional.config.ts  playwright.ui-functional.config.ts  playwright.web.config.ts  pnpm-lock.yaml  starlog_assistant_ui_backend_migration_design.md  starlog_assistant_ui_contracts_and_api_blueprint.md  starlog_assistant_ui_repo_execution_checklist.md  starlog_surface_event_and_dynamic_ui_spec.md  tsconfig.base.json
services/ai-runtime/: README.md  pyproject.toml
services/ai-runtime/bridge/: README.md  __init__.py  config.py  local_stt_server.py  local_tts_server.py  schemas.py  server.py
services/ai-runtime/evals/: autonomy_boundary.json  briefing_memory_context_golden.json  briefing_quality.json  research_digest_pipeline_golden.json  research_digest_quality.json  runtime_conversation_preview_golden.json  voice_native_surface_golden.json
services/ai-runtime/prompts/: README.md  briefing.system.txt  briefing.user.md  chat_turn.system.md  chat_turn.user.txt  llm_agent_plan.system.md  llm_agent_plan.user.txt  llm_cards.system.md  llm_cards.user.txt  llm_summary.system.md  llm_tasks.system.md  research_digest.system.txt  research_digest.user.txt
services/ai-runtime/runtime_app/: __init__.py  evals.py  main.py  prompt_loader.py  schemas.py  workflows.py
services/ai-runtime/scripts/: openai_smoke.py  run_eval_harness.py
services/ai-runtime/tests/: test_eval_fixtures.py  test_eval_harness.py  test_openai_smoke.py  test_prompt_loader.py  test_workflows.py
services/api/: Dockerfile  Dockerfile.railway  pyproject.toml
services/api/app/: __init__.py  main.py  middleware_request_id.py  verify_export_roundtrip.py  worker.py
services/api/tests/: conftest.py  test_ai_runtime_service.py  test_api_flows.py  test_artifact_detail.py  test_artifacts_pdf_cards.py  test_assistant_api.py  test_health.py  (+22 more)
(+509 files in other folders)
