[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starlog-ai-runtime"
version = "0.1.0"
description = "Voice-native Starlog AI runtime"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118.0,<0.119.0",
  "uvicorn[standard]>=0.31.0,<0.32.0",
  "pydantic>=2.9.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<8.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime_app*"]
