[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starlog-api"
version = "0.1.0"
description = "Starlog API service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118.0,<0.119.0",
  "uvicorn[standard]>=0.31.0,<0.32.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "python-multipart>=0.0.20,<0.1.0",
  "cryptography>=44.0.0,<45.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<0.28.0",
  "mypy>=1.11.0,<1.12.0",
  "pytest>=8.3.0,<8.4.0",
  "ruff>=0.6.0,<0.7.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
